--- a/site/components/pages/home/__avatar-and-icons/--mobile/home__avatar-and-icons--mobile.scss
+++ b/site/components/pages/home/__avatar-and-icons/--mobile/home__avatar-and-icons--mobile.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
 
     .avatar {
-      margin-bottom: $lem;
+      margin-bottom: $lem / 2;
       margin-right: 0;
     }
   }
