--- a/site/components/project/avatar/__text/avatar__text.scss
+++ b/site/components/project/avatar/__text/avatar__text.scss
@@ -1,5 +1,5 @@
 @mixin avatar__text {
-  @include colors(plum-on-transparent);
+  @include colors(pink-on-transparent);
 
   .name {
     display: flex;
