Mobile mode elevated to portrait mode

--- a/site/components/pages/home/__avatar-and-icons/--portrait/home__avatar-and-icons--portrait.scss
+++ b/site/components/pages/home/__avatar-and-icons/--portrait/home__avatar-and-icons--portrait.scss
@@ -1,5 +1,5 @@
-@mixin home__avatar-and-icons--mobile {
-  @include mobile {
+@mixin home__avatar-and-icons--portrait {
+  @include portrait {
     flex-direction: column;
 
     .avatar {
