--- a/site/components/project/avatar/--portrait/avatar--portrait.scss
+++ b/site/components/project/avatar/--portrait/avatar--portrait.scss
@@ -1,5 +1,5 @@
-@mixin avatar--mobile($width) {
-  @include mobile {
+@mixin avatar--portrait($width) {
+  @include portrait {
     flex-direction: column;
 
     &__image {
