--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Same Fernandez - Front-end developer</title>
+    <title>Li Yung - UI/UX Designer and developer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
@@ -208,7 +208,7 @@
 </aside>
 
   <article class="monogram__text">
-  <h3 class="title">Same Fernandez</h3>
+  <h3 class="title">Li Yung</h3>
 </article>
 
 </section>
@@ -223,12 +223,12 @@
 
   
   <figure class="avatar__image">
-  <img class="img" src="/assets/images/same-fernandez.jpg" alt="Same Fernandez">
+  <img class="img" src="/assets/images/li-yu.jpg" alt="Li Yung">
 </figure>
 
   <aside class="avatar__text">
-  <h3 class="name">Same Fernandez</h3>
-  <p class="role">Front-end developer</h3>
+  <h3 class="name">Li Yung</h3>
+  <p class="role">UI/UX Designer and developer</h3>
 </aside>
 
 </article>
