Simple favicon added

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Li Yung - UI/UX Designer and developer</title>
+    <title>Josh Wink - DJ &amp; Producer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
@@ -15,6 +15,9 @@
   
 
     
+    <link rel="shortcut icon" href="/assets/images/josh-wink.jpg" />
+<link rel="icon" sizes="196x196" href="/assets/images/josh-wink.jpg">
+
   </head>
 
   <body>
@@ -208,7 +211,7 @@
 </aside>
 
   <article class="monogram__text">
-  <h3 class="title">Li Yung</h3>
+  <h3 class="title">Josh Wink</h3>
 </article>
 
 </section>
@@ -223,12 +226,12 @@
 
   
   <figure class="avatar__image">
-  <img class="img" src="/assets/images/li-yu.jpg" alt="Li Yung">
+  <img class="img" src="/assets/images/josh-wink.jpg" alt="Josh Wink">
 </figure>
 
   <aside class="avatar__text">
-  <h3 class="name">Li Yung</h3>
-  <p class="role">UI/UX Designer and developer</h3>
+  <h3 class="name">Josh Wink</h3>
+  <p class="role">DJ &amp; Producer</h3>
 </aside>
 
 </article>
