--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -15,6 +15,9 @@
   
 
     
+    <link rel="shortcut icon" href="/assets/images/" />
+<link rel="icon" sizes="196x196" href="/assets/images/">
+
   </head>
 
   <body>
