--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -4,7 +4,7 @@
   justify-content: center;
 
   .icomoon {
-    @include icomoon($color-scheme: pink-on-transparent);
+    @include icomoon($color-scheme: pink-on-black);
     padding: 0 $lem / 2;
   }
 }
