--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -7,16 +7,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Li Yu - UI/UX Designer and developer</title>
+    <title>Same Fernandez - Front-end developer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
-    <script src="/assets/scripts/picturefill.min.js"></script>
-  
 
     
-    <link rel="shortcut icon" href="/assets/images/li-yu.jpg" />
-<link rel="icon" sizes="196x196" href="/assets/images/li-yu.jpg">
+    <link rel="shortcut icon" href="/assets/images/same-fernandez.jpg" />
+<link rel="icon" sizes="196x196" href="/assets/images/same-fernandez.jpg">
 
   </head>
 
@@ -139,99 +137,23 @@
 
 
   
-  
   <section class="monogram">
-  <h3>Monogram layer</h3>
-
-  <aside class="monogram__image">
-  <h3>Text Clipping Mask</h3>
-
-  
-  
-
-
-
-
-<figure class="figure">
-  
-
-  <!-- The default extension is .png but other formats are handled too -->
-  
-  
-    
-  
-
-  <!-- If 'onesize' is set all images will have the same size -->
-  
-    <!-- Naming convention for responsive images -->
-    
-    
-    
-    
-    
-    
-    
-    
-  
-
-  <!-- Showing different images for different devices -->
-  
-
-
-  <!-- Figcaption is image title unless is not set explicitely -->
-  
-  
-
-  
-
-
-  <!-- Images are served from /site also for /styleguide -->
-  
-  
-
-
-  <picture class="picture">
-    <!--[if IE 9]><video style="display: none;"><![endif]-->
-    <source media="(min-width: 1600px)" srcset="/assets/images/cliptext-newwave_desktop.jpg, /assets/images/cliptext-newwave_desktop2x.jpg 2x">
-    <source media="(min-width: 1024px)" srcset="/assets/images/cliptext-newwave_laptop.jpg, /assets/images/cliptext-newwave_laptop2x.jpg 2x">
-    <source media="(min-width: 600px)" srcset="/assets/images/cliptext-newwave_tablet.jpg, /assets/images/cliptext-newwave_tablet2x.jpg 2x">
-    <source media="(max-width: 599px)" srcset="/assets/images/cliptext-newwave_mobile.jpg, /assets/images/cliptext-newwave_mobile2x.jpg 2x">
-    <!--[if IE 9]></video><![endif]-->
-    <!-- to make it work with imagesLoaded the 'srcset' is replaced by a standard fallback 'src' -->
-    <img class="img" src="/assets/images/cliptext-newwave_laptop.jpg"  alt="OneShopStop full vivid colors">
-  </picture>
-
-  <figcaption class="figcaption figcaption--from-title">
-    OneShopStop full vivid colors
-  </figcaption>
-
-
-</figure>
-
-</aside>
-
-  <article class="monogram__text">
-  <h3 class="title">Li Yu</h3>
-</article>
-
+  <h3 class="monogram__name">Same Fernandez</h3>
 </section>
 
 
   
-  <section class="home__avatar-and-icons">
-  <h3>Avatar and icons</h3>
-
   <article class="avatar">
   <h3>Avatar</h3>
 
   
   <figure class="avatar__image">
-  <img class="img" src="/assets/images/li-yu.jpg" alt="Li Yu">
+  <img class="img" src="/assets/images/same-fernandez.jpg" alt="Same Fernandez">
 </figure>
 
   <aside class="avatar__text">
-  <h3 class="name">Li Yu</h3>
-  <p class="role">UI/UX Designer and developer</h3>
+  <h3 class="name">Same Fernandez</h3>
+  <p class="role">Front-end developer</h3>
 </aside>
 
 </article>
@@ -285,8 +207,6 @@
 
   
 </article>
-
-</section>
 
 
 
