--- a/site/components/project/monogram/monogram.scss
+++ b/site/components/project/monogram/monogram.scss
@@ -10,7 +10,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
 
   @include text-style(title);
   line-height: 1;
