Character sizing done for the monogram

--- a/site/components/project/monogram/__row/character/character.scss
+++ b/site/components/project/monogram/__row/character/character.scss
@@ -1,5 +1,6 @@
-@mixin character($space: hidden) {
+@mixin character($size: $lem, $space: hidden) {
   @include text-style(title);
+  font-size: $size;
 
   &.character__space {
     @include character__space($space);
