Documentation added to HTML

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -7,11 +7,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Modify here -->
     <title>Same Fernandez - Front-end developer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
+    <!-- Modify here -->
     
     <link rel="shortcut icon" href="/assets/images/same-fernandez.jpg" />
 <link rel="icon" sizes="196x196" href="/assets/images/same-fernandez.jpg">
@@ -21,6 +23,11 @@
   <body>
     
 
+  <!-- Modify here -->
+  <!-- This is the list of all icons supported -->
+  <!-- If an icon is missing you can add from https://icomoon.io/ -->
+  <!-- Create a new set of icons with the Icomoon App then Generate SVG. Copy the contents of the SVG here -->
+  <!-- You can remove the ones you don't need but you don't have too, your site performance is not affected if they are left here -->
   <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
 <symbol id="icon-lanyrd" viewBox="0 0 1024 1024">
@@ -138,6 +145,7 @@
 
   
   <section class="monogram">
+  <!-- Modify here -->
   <h3 class="monogram__name">Same Fernandez</h3>
 </section>
 
@@ -148,20 +156,32 @@
 
   
   <figure class="avatar__image">
+  <!-- Modify here -->
   <img class="img" src="/assets/images/same-fernandez.jpg" alt="Same Fernandez">
 </figure>
 
   <aside class="avatar__text">
+  <!-- Modify here -->
   <h3 class="name">Same Fernandez</h3>
+
+  <!-- Modify here -->
   <p class="role">Front-end developer</h3>
 </aside>
 
 </article>
 
-  <article class="icons">
+  <!-- Modify here -->
+<!-- Below there are some sample icons linking nowhere -->
+<!-- You can remove or add new ones -->
+<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
+<!-- Do the replace twice, in <svg> and <use> -->
+
+<article class="icons">
   <h3>Icons</h3>
 
   
+    <!-- Modify here -->
+    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="mailto:" title="Email">
@@ -173,6 +193,8 @@
 </div>
 
   
+    <!-- Modify here -->
+    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://github.com" title="Github">
@@ -184,6 +206,8 @@
 </div>
 
   
+    <!-- Modify here -->
+    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://twitter.com" title="Twitter">
@@ -195,6 +219,8 @@
 </div>
 
   
+    <!-- Modify here -->
+    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://medium.com" title="Medium">
