--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -7,11 +7,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Modify here -->
     <title> - </title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
+    <!-- Modify here -->
     
     <link rel="shortcut icon" href="/assets/images/" />
 <link rel="icon" sizes="196x196" href="/assets/images/">
@@ -21,6 +23,11 @@
   <body>
     
 
+  <!-- Modify here -->
+  <!-- This is the list of all icons supported -->
+  <!-- If an icon is missing you can add from https://icomoon.io/ -->
+  <!-- Create a new set of icons with the Icomoon App then Generate SVG. Copy the contents of the SVG here -->
+  <!-- You can remove the ones you don't need but you don't have too, your site performance is not affected if they are left here -->
   <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
 <symbol id="icon-lanyrd" viewBox="0 0 1024 1024">
