--- a/site/components/project/templates/head/__icomoon/head__icomoon.html
+++ b/site/components/project/templates/head/__icomoon/head__icomoon.html
@@ -1,5 +1,10 @@
 
 
+  <!-- Modify here -->
+  <!-- This is the list of all icons supported -->
+  <!-- If an icon is missing you can add from https://icomoon.io/ -->
+  <!-- Create a new set of icons with the Icomoon App then Generate SVG. Copy the contents of the SVG here -->
+  <!-- You can remove the ones you don't need but you don't have too, your site performance is not affected if they are left here -->
   <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
 <symbol id="icon-lanyrd" viewBox="0 0 1024 1024">
