--- a/site/components/project/avatar/avatar.html
+++ b/site/components/project/avatar/avatar.html
@@ -3,11 +3,15 @@
 
   
   <figure class="avatar__image">
+  <!-- Modify here -->
   <img class="img" src="/assets/images/" alt="">
 </figure>
 
   <aside class="avatar__text">
+  <!-- Modify here -->
   <h3 class="name"></h3>
+
+  <!-- Modify here -->
   <p class="role"></h3>
 </aside>
 
