--- a/site/components/project/monogram/__row/monogram__row.scss
+++ b/site/components/project/monogram/__row/monogram__row.scss
@@ -1,15 +1,17 @@
-@mixin monogram__row($width, $height) {
-  width: $width;
-
+@mixin monogram__row($width, $height, $percentage) {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @if ($width != 0) {
+    width: $width;
+  }
 
   &.monogram__row--cols2 {
     height: $height / 2;
 
     .character {
-      @include character($size: $height / 2);
+      @include character($percentage, $size: $height / 2);
     }
   }
 
@@ -17,7 +19,7 @@
     height: $height / 3;
 
     .character {
-      @include character($size: $height / 3);
+      @include character($percentage, $size: $height / 3);
     }
   }
 
@@ -25,7 +27,7 @@
     height: $height / 4;
 
     .character {
-      @include character($size: $height / 4);
+      @include character($percentage, $size: $height / 4);
     }
   }
 
@@ -33,7 +35,7 @@
     height: $height / 5;
 
     .character {
-      @include character($size: $height / 5);
+      @include character($percentage, $size: $height / 5);
     }
   }
 }
