--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -158,7 +158,7 @@
 
   
     <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
+    <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="mailto:" title="Email">
@@ -171,7 +171,7 @@
 
   
     <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
+    <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://github.com" title="Github">
@@ -184,7 +184,7 @@
 
   
     <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
+    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://twitter.com" title="Twitter">
@@ -197,7 +197,7 @@
 
   
     <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com/metamn"> -->
+    <!-- Replace dummy data like <a href="http://medium.com"> with your real data <a href="http://medium.com<your-data>"> -->
     <div class="icomoon">
   
     <a class="icomoon__link" href="http://medium.com" title="Medium">
