--- a/site/components/framework/structure/icomoon/icomoon.scss
+++ b/site/components/framework/structure/icomoon/icomoon.scss
@@ -1,4 +1,4 @@
-@mixin icomoon($size: $lem, $color-scheme: blue-on-black) {
+@mixin icomoon($size: $lem, $color-scheme: black-on-white) {
   display: flex;
   width: $size;
   height: $size;
