--- a/site/components/project/monogram/__row/character/character.scss
+++ b/site/components/project/monogram/__row/character/character.scss
@@ -12,4 +12,9 @@
   &.character__space {
     @include character__space($space);
   }
+
+  @include transition(text-shadow);
+  &.shadow {
+    @include character--shadow($orange);
+  }
 }
