Ready to add icon click event

--- a/site/components/framework/design/typography/elements/link/link.scss
+++ b/site/components/framework/design/typography/elements/link/link.scss
@@ -7,6 +7,12 @@
 @mixin link($color-scheme: none, $type: none) {
   text-decoration: none;
 
+  @include transition(text-decoration);
+  &:hover,
+  &:active {
+    text-decoration: line-through;
+  }
+
   @if ($color-scheme != none) {
     @include colors($color-scheme);
   }
