Monogram base, white on blue theme added

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Modify here -->
-    <title>Same Fernandez - Front-end developer</title>
+    <title>Josh Wink - DJ &amp; Producer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="/assets/images/same-fernandez.jpg" />
-<link rel="icon" sizes="196x196" href="/assets/images/same-fernandez.jpg">
+    <link rel="shortcut icon" href="/assets/images/josh-wink.jpg" />
+<link rel="icon" sizes="196x196" href="/assets/images/josh-wink.jpg">
 
   </head>
 
@@ -142,7 +142,7 @@
   
   <section class="monogram">
   <!-- Modify here -->
-  <h3 class="monogram__name">Same Fernandez</h3>
+  <h3 class="monogram__name">Josh Wink</h3>
 </section>
 
 
