--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -212,6 +212,21 @@
 </article>
 
 
+  <section class="cube">
+  <h3>Cube</h3>
+
+  <div class="wrap">
+  	<div class="cube3d">
+  		<div class="front">front</div>
+  		<div class="back">back</div>
+  		<div class="top">top</div>
+  		<div class="bottom">bottom</div>
+  		<div class="left">left</div>
+  		<div class="right">right</div>
+  	</div>
+  </div>
+</sectipn>
+
 
 
 
