Cube transformed to BEM notation

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -215,14 +215,14 @@
   <section class="cube">
   <h3>Cube</h3>
 
-  <div class="wrap">
+  <div class="cube__wrap">
   	<div class="cube3d">
-  		<div class="front">front</div>
-  		<div class="back">back</div>
-  		<div class="top">top</div>
-  		<div class="bottom">bottom</div>
-  		<div class="left">left</div>
-  		<div class="right">right</div>
+  		<div class="cube3d__face cube3d__face--front">front</div>
+  		<div class="cube3d__face cube3d__face--back">back</div>
+  		<div class="cube3d__face cube3d__face--top">top</div>
+  		<div class="cube3d__face cube3d__face--bottom">bottom</div>
+  		<div class="cube3d__face cube3d__face--left">left</div>
+  		<div class="cube3d__face cube3d__face--right">right</div>
   	</div>
   </div>
 </sectipn>
