--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -4,7 +4,7 @@ html {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-around;
+      justify-content: center;
 
       min-height: 100vh;
 
