--- a/site/components/project/cube/cube.scss
+++ b/site/components/project/cube/cube.scss
@@ -1,5 +1,6 @@
 @mixin cube {
-  .wrap {
+
+  &__wrap {
   	perspective: 800px;
   	perspective-origin: 50% 100px;
   }
@@ -8,37 +9,44 @@
   	position: relative;
   	width: 200px;
   	transform-style: preserve-3d;
+
+    &__face {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      border: 1px solid;
+
+      &--back {
+        transform: translateZ(-100px) rotateY(180deg);
+      }
+
+      &--right {
+        transform: rotateY(-270deg) translateX(100px);
+        transform-origin: top right;
+      }
+
+      &--left {
+        transform: rotateY(270deg) translateX(-100px);
+        transform-origin: center left;
+      }
+
+      &--top {
+        transform: rotateX(-90deg) translateY(-100px);
+        transform-origin: top center;
+      }
+
+      &--bottom {
+        transform: rotateX(90deg) translateY(100px);
+        transform-origin: bottom center;
+      }
+
+      &--front {
+        transform: translateZ(100px);
+      }
+    }
   }
 
-  .cube3d div {
-  	position: absolute;
-  	width: 200px;
-  	height: 200px;
-    border: 1px solid;
-  }
 
-  .back {
-  	transform: translateZ(-100px) rotateY(180deg);
-  }
-  .right {
-  	transform: rotateY(-270deg) translateX(100px);
-  	transform-origin: top right;
-  }
-  .left {
-  	transform: rotateY(270deg) translateX(-100px);
-  	transform-origin: center left;
-  }
-  .top {
-  	transform: rotateX(-90deg) translateY(-100px);
-  	transform-origin: top center;
-  }
-  .bottom {
-  	transform: rotateX(90deg) translateY(100px);
-  	transform-origin: bottom center;
-  }
-  .front {
-  	transform: translateZ(100px);
-  }
 
   @keyframes spin {
   	from { transform: rotateY(0); }
