--- a/site/components/project/cube/cube.scss
+++ b/site/components/project/cube/cube.scss
@@ -1,4 +1,4 @@
-@mixin cube {
+@mixin cube($width: 200px, $height: 200px) {
 
   &__wrap {
   	perspective: 800px;
@@ -7,41 +7,41 @@
 
   .cube3d {
   	position: relative;
-  	width: 200px;
+  	width: $width;
   	transform-style: preserve-3d;
 
     &__face {
       position: absolute;
-      width: 200px;
-      height: 200px;
+      width: $width;
+      height: $width;
       border: 1px solid;
 
       &--back {
-        transform: translateZ(-100px) rotateY(180deg);
+        transform: translateZ(-$width / 2) rotateY(180deg);
       }
 
       &--right {
-        transform: rotateY(-270deg) translateX(100px);
+        transform: rotateY(-270deg) translateX($width / 2);
         transform-origin: top right;
       }
 
       &--left {
-        transform: rotateY(270deg) translateX(-100px);
+        transform: rotateY(270deg) translateX(-$width / 2);
         transform-origin: center left;
       }
 
       &--top {
-        transform: rotateX(-90deg) translateY(-100px);
+        transform: rotateX(-90deg) translateY(-$width / 2);
         transform-origin: top center;
       }
 
       &--bottom {
-        transform: rotateX(90deg) translateY(100px);
+        transform: rotateX(90deg) translateY($width / 2);
         transform-origin: bottom center;
       }
 
       &--front {
-        transform: translateZ(100px);
+        transform: translateZ($width / 2);
       }
     }
   }
