Icons added to the cube

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -217,12 +217,60 @@
 
   <div class="cube__wrap">
   	<div class="cube3d">
-  		<div class="cube3d__face cube3d__face--front">front</div>
-  		<div class="cube3d__face cube3d__face--back">back</div>
+  		<div class="cube3d__face cube3d__face--front">
+        
+        <div class="icomoon">
+  
+    <a class="icomoon__link" href="mailto:" title="Email">
+  
+
+  <svg class="icomoon__icon icon-envelope"><use xlink:href="#icon-envelope"></use></svg>
+
+  </a>
+</div>
+
+      </div>
+  		<div class="cube3d__face cube3d__face--back">
+        
+        <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://github.com" title="Github">
+  
+
+  <svg class="icomoon__icon icon-github"><use xlink:href="#icon-github"></use></svg>
+
+  </a>
+</div>
+
+      </div>
   		<div class="cube3d__face cube3d__face--top">top</div>
   		<div class="cube3d__face cube3d__face--bottom">bottom</div>
-  		<div class="cube3d__face cube3d__face--left">left</div>
-  		<div class="cube3d__face cube3d__face--right">right</div>
+  		<div class="cube3d__face cube3d__face--left">
+        
+        <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://twitter.com" title="Twitter">
+  
+
+  <svg class="icomoon__icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
+
+  </a>
+</div>
+
+      </div>
+  		<div class="cube3d__face cube3d__face--right">
+        
+        <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://medium.com" title="Medium">
+  
+
+  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
+
+  </a>
+</div>
+
+      </div>
   	</div>
   </div>
 </sectipn>
