--- a/site/components/project/cube/cube.html
+++ b/site/components/project/cube/cube.html
@@ -3,12 +3,52 @@
 
   <div class="cube__wrap">
   	<div class="cube3d">
-  		<div class="cube3d__face cube3d__face--front">front</div>
-  		<div class="cube3d__face cube3d__face--back">back</div>
+  		<div class="cube3d__face cube3d__face--front">
+        
+        <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+      </div>
+  		<div class="cube3d__face cube3d__face--back">
+        
+        <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+      </div>
   		<div class="cube3d__face cube3d__face--top">top</div>
   		<div class="cube3d__face cube3d__face--bottom">bottom</div>
-  		<div class="cube3d__face cube3d__face--left">left</div>
-  		<div class="cube3d__face cube3d__face--right">right</div>
+  		<div class="cube3d__face cube3d__face--left">
+        
+        <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+      </div>
+  		<div class="cube3d__face cube3d__face--right">
+        
+        <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+      </div>
   	</div>
   </div>
 </sectipn>
